--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
   --sidebar-accent-foreground: oklch(0 0 0);
   --sidebar-border: oklch(0.8699 0 0);
   --sidebar-ring: oklch(0.8677 0.0735 7.0855);
-  --font-sans: Poppins, sans-serif;
+  --font-sans: Zen Kaku Gothic New, sans-serif;
   --font-serif: Playfair Display, ui-serif, serif;
   --font-mono: Roboto Mono, monospace;
   --font-weight-light: 300;
@@ -99,7 +99,7 @@
   --sidebar-accent-foreground: oklch(0 0 0);
   --sidebar-border: oklch(0.3867 0 0);
   --sidebar-ring: oklch(0.8027 0.1355 349.2347);
-  --font-sans: Poppins, sans-serif;
+  --font-sans: Zen Kaku Gothic New, sans-serif;
   --font-serif: Playfair Display, ui-serif, serif;
   --font-mono: Roboto Mono, monospace;
   --font-weight-light: 300;
